substrate/primitives/api/test/tests/ui/impl_incorrect_method_signature.stderr
error[E0603]: struct `RuntimeVersion` is private
  --> tests/ui/impl_incorrect_method_signature.rs:37:27
   |
37 |         fn version() -> sp_api::RuntimeVersion {
   |                                 ^^^^^^^^^^^^^^ private struct
   |
note: the struct `RuntimeVersion` is defined here
  --> $WORKSPACE/substrate/primitives/api/src/lib.rs
   |
   | use sp_version::RuntimeVersion;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: consider importing one of these items instead
   |
37 |         fn version() -> sp_api::__private::RuntimeVersion {
   |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
37 |         fn version() -> sp_version::RuntimeVersion {
   |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0053]: method `test` has an incompatible type for trait
  --> tests/ui/impl_incorrect_method_signature.rs:33:17
   |
33 |         fn test(data: String) {}
   |                       ^^^^^^
   |                       |
   |                       expected `u64`, found `std::string::String`
   |                       help: change the parameter type to match the trait: `u64`
   |
note: type in trait
  --> tests/ui/impl_incorrect_method_signature.rs:27:17
   |
27 |         fn test(data: u64);
   |                       ^^^
   = note: expected signature `fn(u64)`
              found signature `fn(std::string::String)`

error[E0053]: method `initialize_block` has an incompatible type for trait
  --> tests/ui/impl_incorrect_method_signature.rs:43:54
   |
43 |         fn initialize_block(_: &<Block as BlockT>::Header) -> sp_runtime::ExtrinsicInclusionMode {
   |                                                            ^ expected `ExtrinsicInclusionMode`, found `()`
   |
   = note: expected signature `fn(&sp_runtime::generic::Header<u64, BlakeTwo256>) -> ExtrinsicInclusionMode`
              found signature `fn(&sp_runtime::generic::Header<u64, BlakeTwo256>)`
help: change the output type to match the trait
   |
43 |         fn initialize_block(_: &<Block as BlockT>::Header) -> ExtrinsicInclusionMode {
   |                                                            +++++++++++++++++++++++++

error[E0308]: mismatched types
  --> tests/ui/impl_incorrect_method_signature.rs:33:11
   |
31 | / sp_api::impl_runtime_apis! {
32 | |     impl self::Api<Block> for Runtime {
33 | |         fn test(data: String) {}
   | |                 ^^^^ expected `u64`, found `String`
34 | |     }
...  |
46 | |     }
47 | | }
   | |_- arguments to this function are incorrect
   |
note: associated function defined here
  --> tests/ui/impl_incorrect_method_signature.rs:27:6
   |
27 |         fn test(data: u64);
   |            ^^^^
